@@ -1,18 +1,16 @@
 package io.cloudtrust.keycloak.services.api.admin;
 
 import io.cloudtrust.keycloak.AbstractRestApiExtensionTest;
+import io.cloudtrust.keycloak.config.ServerConfig;
 import io.cloudtrust.keycloak.representations.idm.UsersPageRepresentation;
-import io.cloudtrust.keycloak.test.container.KeycloakDeploy;
 import org.apache.http.NameValuePair;
 import org.apache.http.message.BasicNameValuePair;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.keycloak.admin.client.resource.RealmResource;
-import org.keycloak.representations.idm.GroupRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.testframework.annotations.KeycloakIntegrationTest;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
@@ -29,22 +27,22 @@ import static org.hamcrest.Matchers.arrayWithSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
 
-@ExtendWith(KeycloakDeploy.class)
+@KeycloakIntegrationTest(config = ServerConfig.class)
 class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     private static final String getMethod = "GET";
 
     private String findRoleId(String name) {
-        return this.getRealm("test").roles().get(name).toRepresentation().getId();
+        return testRealm.admin().roles().get(name).toRepresentation().getId();
     }
 
     private String findGroupId(String name) {
-        return this.getRealm("test").groups().groups(name, null, null).get(0).getId();
+        return testRealm.admin().groups().groups(name, null, null).getFirst().getId();
     }
 
     @Test
     void testStandardGetUsers() throws IOException, URISyntaxException {
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users");
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users");
+        var users = grabUsers(page);
         assertThat(users, notNullValue());
         assertThat(users, arrayWithSize(8));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
@@ -60,8 +58,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
         List<NameValuePair> nvps = List.of(
                 new BasicNameValuePair("first", "0"),
                 new BasicNameValuePair("max", "2"));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, notNullValue());
         assertThat(users, arrayWithSize(2));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(), arrayContaining("john-doh@localhost", "keycloak-user@localhost"));
@@ -71,7 +69,7 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
         nvps = List.of(
                 new BasicNameValuePair("first", "4"),
                 new BasicNameValuePair("max", "2"));
-        page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
         users = grabUsers(page);
         assertThat(users, notNullValue());
         assertThat(users, arrayWithSize(2));
@@ -82,8 +80,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     @Test
     void testStandardGetUser() throws IOException, URISyntaxException {
         List<NameValuePair> nvps = Collections.singletonList(new BasicNameValuePair("username", "rolerichuser"));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, notNullValue());
         assertThat(users, arrayWithSize(1));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
@@ -95,8 +93,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     @MethodSource("getUsersWithWildcardSamples")
     void testGetUsersWithWildcard(String field, String value, int expectedCount) throws IOException, URISyntaxException {
         List<NameValuePair> nvps = Collections.singletonList(new BasicNameValuePair(field, value));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, notNullValue());
         assertThat(users.length, is(expectedCount));
     }
@@ -114,11 +112,10 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
 
     @Test
     void testGetUsersWithGroup() throws IOException, URISyntaxException {
-        RealmResource testRealm = this.getRealm();
 
         List<NameValuePair> nvps = Collections.singletonList(new BasicNameValuePair("groupId", findGroupId("topGroup")));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(2));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
                 arrayContainingInAnyOrder("topgroupuser", "topgroupuser2"));
@@ -126,10 +123,10 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
 
         nvps = new ArrayList<>();
         // With KC18, subgroups are not filled in the group when searching with groups().group(...) so we search the group and get it again by its id
-        String roleRichGroupId = findGroupId("roleRichGroup");
-        GroupRepresentation subGroup = testRealm.groups().group(roleRichGroupId).getSubGroups("level2group", true, 0, 100, false).get(0);
+        var roleRichGroupId = findGroupId("roleRichGroup");
+        var subGroup = testRealm.admin().groups().group(roleRichGroupId).getSubGroups("level2group", true, 0, 100, false).getFirst();
         nvps.add(new BasicNameValuePair("groupId", subGroup.getId()));
-        page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
         users = grabUsers(page);
         assertThat(users, arrayWithSize(1));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
@@ -137,7 +134,7 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
         assertThat(page.getCount(), is(1));
 
         nvps.add(new BasicNameValuePair("groupId", findGroupId("topGroup")));
-        page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
         users = grabUsers(page);
         assertThat(users, arrayWithSize(3));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
@@ -149,8 +146,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     void testGetUsersWithRole() throws IOException, URISyntaxException {
         List<NameValuePair> nvps = new ArrayList<>();
         nvps.add(new BasicNameValuePair("roleId", findRoleId("user")));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(5));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
                 arrayContainingInAnyOrder("non-duplicate-email-user", "topgroupuser2"
@@ -158,7 +155,7 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
         assertThat(page.getCount(), is(5));
 
         nvps.add(new BasicNameValuePair("roleId", findRoleId("offline_access")));
-        page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
         users = grabUsers(page);
         assertThat(users, arrayWithSize(6));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
@@ -172,15 +169,15 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
         List<NameValuePair> nvps = new ArrayList<>();
         nvps.add(new BasicNameValuePair("roleId", findRoleId("user")));
         nvps.add(new BasicNameValuePair("groupId", findGroupId("topGroup")));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(1));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
                 arrayContainingInAnyOrder("topgroupuser2"));
         assertThat(page.getCount(), is(1));
 
         nvps.add(new BasicNameValuePair("roleId", findRoleId("offline_access")));
-        page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
         users = grabUsers(page);
         assertThat(users, arrayWithSize(2));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
@@ -191,8 +188,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     @Test
     void testGetUsersWithNonExistingGroup() throws IOException, URISyntaxException {
         List<NameValuePair> nvps = Collections.singletonList(new BasicNameValuePair("groupId", "123"));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(0));
         assertThat(page.getCount(), is(0));
     }
@@ -200,8 +197,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     @Test
     void testGetUsersWithNonExistingRole() throws IOException, URISyntaxException {
         List<NameValuePair> nvps = Collections.singletonList(new BasicNameValuePair("roleId", "123879834564"));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(0));
         assertThat(page.getCount(), is(0));
     }
@@ -211,8 +208,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
         List<NameValuePair> nvps = List.of(
                 new BasicNameValuePair("groupId", findGroupId("topGroup")),
                 new BasicNameValuePair("search", "topgroupuser2"));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(1));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
                 arrayContainingInAnyOrder("topgroupuser2"));
@@ -222,8 +219,8 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     @Test
     void testGetUsersWithSearch() throws IOException, URISyntaxException {
         List<NameValuePair> nvps = Collections.singletonList(new BasicNameValuePair("search", "topgroupuser"));
-        UsersPageRepresentation page = this.api().query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
-        UserRepresentation[] users = grabUsers(page);
+        var page = this.api(keycloak, testRealm).query(UsersPageRepresentation.class, getMethod, "/realms/master/api/admin/realms/test/users", nvps);
+        var users = grabUsers(page);
         assertThat(users, arrayWithSize(2));
         assertThat(Arrays.stream(users).map(UserRepresentation::getUsername).toArray(),
                 arrayContainingInAnyOrder("topgroupuser", "topgroupuser2"));
@@ -231,6 +228,6 @@ class CtUsersResourceTest extends AbstractRestApiExtensionTest {
     }
 
     private UserRepresentation[] grabUsers(UsersPageRepresentation page) {
-        return page.getUsers().toArray(n -> new UserRepresentation[n]);
+        return page.getUsers().toArray(UserRepresentation[]::new);
     }
 }
